--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         <aside>
             <span class="title">지금까지 재배된 토마토</span>
+            <div class="completed"></div>
         </aside>
     </main>
     <script src="Pomodoro.js"></script>
