--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <section>
             <article class="contents">
                 <button class="startBtn">재배시작하기</button>
+                <div class="state"></div>
+                <div class="time"></div>
             </article>
         </section>
 
