--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <body>
     <header>
         <span class="title">토마토를 재배하세요</span>
-        <p class="description"> 한번 재배를 시작하면 1시간동안 4개의 토마토를 만들 수 있어요</p>
+        <p class="description"> 20분동안 집중하고 5분동안 휴식해서 토마토를 하나 만들어요!</p>
     </header>
     <main>
         <section>
             <article class="contents">
-                <button class="startBtn">재배시작하기</button>
+                <button class="startBtn" id="1">토마토 1개 만들기</button>
+                <button class="startBtn" id="2">토마토 2개 만들기</button>
+                <button class="startBtn" id="4">토마토 4개 만들기</button>
                 <div class="state"></div>
                 <div class="time"></div>
             </article>
