Add hiding history initially

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </article>
         </section>
 
-        <aside>
+        <aside class="history">
             <span class="title">지금까지 재배된 토마토</span>
             <div class="completed"></div>
         </aside>
