--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <span class="title">토마토를 재배하세요</span>
-        <p class="description"> 20분동안 집중하고 5분동안 휴식해서 토마토를 하나 만들어요!</p>
+        <span class="title">🍅토마토를 재배하세요🍅 </span>
+        <p class="description"> 20분동안 집중하고 5분동안 휴식해서 토마토를 하나 재배해요!</p>
     </header>
     <main>
         <section>
@@ -23,6 +23,7 @@
                 <button class="startBtn" id="4">토마토 4개 만들기</button>
                 <div class="state"></div>
                 <div class="time"></div>
+                <div class="playStatus"></div>
             </article>
         </section>
 
